Removed the Bug of Z-Index

--- a/teacher/CSS/mynavigationbar.css
+++ b/teacher/CSS/mynavigationbar.css
@@ -190,7 +190,7 @@
 {
 
     #mynavigationBar {  
-        z-index: 201;  
+        z-index: 199;  
         width: 100%;
         position: fixed;
         overflow-y: hidden;
